profilelist1exp/unpackaged/objects/Export_Open_Quotes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Field__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Export Open Quote</label>
</CustomObject>